# fortigate-api

./: .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  CHANGELOG.txt  LICENSE.txt  Pipfile  README.md  README.rst  __init__.py  examples_address.ipynb  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: test_on_push.yml
docs/: Address.rst  CiscoConfParse.rst  Fortigate.rst  FortigateAPI.rst  SSH.rst  conf.py  connector.j2  create_doc.py  examples.rst  filtering_keys.rst  fortigate.rst  fortigate_api.rst  index.rst  make.bat  objects.rst  requirements.txt  ssh.rst
docs/fortigateapi/: CmdbS.rst  FortiGate.rst  FortiGateAPI.rst  LogS.rst  MonitorS.rst  _contents.rst  extended_filtering_conditions.rst  filtering_conditions.rst
docs/fortigateapi/cmdb/: _contents.rst
docs/fortigateapi/data/: cmdb.rst
docs/fortigateapi/log/: _contents.rst
docs/fortigateapi/monitor/: _contents.rst
docs/objects/: Address.rst  AddressGroup.rst  Antivirus.rst  Application.rst  DhcpServer.rst  ExternalResource.rst  Interface.rst  InternetService.rst  IpPool.rst  Policy.rst  Schedule.rst  Service.rst  ServiceCategory.rst  ServiceGroup.rst  SnmpCommunity.rst  Vdoms.rst  VirtualIp.rst  Zone.rst  address.rst
docs/rest_api/: _contents.rst
docs/rest_api/6.4.14/: cmdb.rst  log.rst  monitor.rst
docs/rest_api/7.2.6/: scope.rst
docs/templates/: connector.j2  fortigate_api.j2  objects.j2
docs/templates/fortigateapi/: app_contents.j2  class_connector.j2  class_fortigate.j2  (+2 more)
docs/yml/: Address.rst  AddressGroup.rst  Antivirus.rst  Application.rst  DhcpServer.rst  ExternalResource.rst  Interface.rst  InternetService.rst  IpPool.rst  Policy.rst  Schedule.rst  Service.rst  ServiceCategory.rst  ServiceGroup.rst  SnmpCommunity.rst  Vdom.rst  Vdoms.rst  VirtualIp.rst  Zone.rst  address.rst  antivirus.yml  dhcp_server.yml  external_resource.yml  internet_service.yml  ip_pool.yml  schedule.yml  snmp_community.yml
examples/: address.py  address.yml  address_group.py  address_group.yml  address_token.py  ccp.py  dhcp_server.py  examples.py  examples_address.ipynb  extended_filtering_conditions.py  external_resource.py  filtering_conditions.py  fortigate.py  fortigate_token.py  fortigateapi.py  interface.py  ip_pool.py  monitor.py  policy.py  policy.yml  policy_extended_filter.py  quickstart_fortigate.py  quickstart_fortigate_api.py  service.yml  snmp_community.py  ssh.py  ssh_vdom.py  vdoms.py  zone.yml
examples/quickstart/: fortigate.py  fortigateapi.py
examples/yml/: application.yml  interface.yml  policy.yml  service_category.yml  service_group.yml  vdoms.yml  virtual_ip.yml
fortigate_api/: __init__.py  action.py  address.py  address_group.py  antivirus.py  api.py  application.py  base.py  ccp.py  connector.py  dhcp_server.py  dict_.py  extended_filters.py  external_resource.py  fortigate.py  fortigate_api.py  fortigate_base.py  helper.py  helpers.py  interface.py  internet_service.py  ip_pool.py  object.py  policy.py  schedule.py  service.py  service_category.py  service_group.py  setting.py  snmp_community.py  ssh.py  str_.py  types_.py  typing_.py  vdoms.py  virtual_ip.py  zone.py
fortigate_api - Copy/: address_group.py  antivirus.py  application.py  ccp.py  extended_filters.py  fortigate.py  fortigate_api.py  helpers.py  interface.py  internet_service.py  service.py  service_category.py  snmp_community.py  types_.py  virtual_ip.py  zone.py
fortigate_api/base/: __init__.py  object_base.py  object_id.py  object_name.py
fortigate_api/cmdb/: __init__.py  cmdb_s.py
fortigate_api/log/: __init__.py  log_s.py
fortigate_api/monitor/: __init__.py  monitor_s.py
fortigate_api/objects/: __init__.py  address.py  address_group.py  antivirus.py  application.py  interface.py  internet_service.py  ip_pool.py  object.py  policy.py  schedule.py  service.py  service_category.py  service_group.py  snmp_community.py  virtual_ip.py  zone.py
fortigate_api/schema/: __init__.py  models.py  tools.py
fortigate_api/tools/: __init__.py
tests/: Dockerfile  helper__tst.py  helpers__ccp.py  helpers__efilters.py  helpers__tst.py  mock_fortigate.py  mock_response.py  mock_session.py  test__action.py  test__address.py  test__address_group.py  test__antivirus.py  test__application.py  test__base.py  test__ccp.py  test__connector.py  test__connector__cmdb_firewall_policy.py  test__connector_create.py  test__connector_delete.py  test__connector_get.py  test__connector_is_exist.py  test__connector_update.py  test__extended_filters.py  test__external_resource.py  test__files.py  test__fortigate.py  test__fortigate_api.py  test__fortigate_base.py  test__helper.py  test__helpers.py  test__interface.py  test__interface_service.py  test__ip_pool.py  test__package.py  test__policy.py  test__schedule.py  test__service.py  test__service_category.py  test__service_group.py  test__snmp_community.py  (+2 more)
tests/ccp_/: test__ccp.py
tests/connectors/: __init__.py  test__connectors.py  test__connectors_create.py  test__connectors_delete.py  test__connectors_get.py  test__connectors_is_exist.py  test__connectors_update.py  test__policy.py  test__snmp_community.py
tests/objects/: __init__.py  test__address.py  test__address_group.py  test__antivirus.py  test__application.py  test__connectors.py  test__extended_filters.py  test__external_resource.py  test__interface.py  test__interface_service.py  test__ip_pool.py  test__policy.py  test__schedule.py  test__service.py  test__service_category.py  test__service_group.py  test__snmp_community.py  test__virtual_ip.py  test__zone.py
tests/objects_/: test__address.py  test__address_group.py  test__antivirus.py  test__application.py  test__interface.py  test__interface_service.py  test__ip_pool.py  test__objct.py  test__policy.py  test__schedule.py  test__service.py  test__service_category.py  test__service_group.py  test__snmp_community.py  test__virtual_ip.py  test__zone.py
tests/objects_base_/: test__object_base.py
tests/tools_/: test__dict.py  test__helper.py  test__str.py
tools/: gitlab_to_github.py  notes.txt
(+1269 files in other folders)
