[tool.poetry]
name = "fortigate_api"
version = "1.3.2"
description = "Python package to configure Fortigate (Fortios) devices using REST API and SSH"
authors = ["Vladimirs Prusakovs <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://github.com/vladimirs-git/fortigate-api"
repository = "https://github.com/vladimirs-git/fortigate-api"
keywords = ["fortigate", "fortios", "api", "ssh", "firewall", "rest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    # "Operating System :: FortiOS",
    "Topic :: System :: Networking :: Firewalls",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
]
[tool.poetry.dependencies]
python = "^3.8"
ciscoconfparse = "^1.9.28"
netmiko = "^4.2.0"
requests = "^2.28"
vhelpers = "^0.1.16"

[tool.poetry.group.dev.dependencies]
dictdiffer = "^0.9.0"
jinja2 = "^3.1.2"
mypy = "^1.8.0"
pygments = "^2.17.2"
pylint = "^3.0.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
readthedocs-sphinx-search = "^0.3.1"
requests-mock = "^1.11.0"
restructuredtext-lint = "^1.4.0"
ruff = "^0.1.9"
sphinx = "7.1.2"
sphinx-rtd-theme = "^1.3.0"
twine = "^4.0.2"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"
types-tabulate = "^0.9.0.3"
typing-extensions = "^4.8.0"

[tool.setuptools.package-data]
fortigate_api = ["py.typed"]

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimirs-git/fortigate-api/issues"
"Download URL" = "https://github.com/vladimirs-git/fortigate-api/archive/refs/tags/1.3.2.tar.gz"

[tool.mypy]
python_version = "3.8"

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "demo",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
