[tool.poetry]
name = "fortigate_api"
version = "2.0.7"
description = "Python package to configure Fortigate (Fortios) devices using REST API and SSH"
authors = ["Vladimirs Prusakovs <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://github.com/vladimirs-git/fortigate-api"
repository = "https://github.com/vladimirs-git/fortigate-api"
keywords = ["fortigate", "fortios", "rest", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    # "Operating System :: FortiOS",
    "Topic :: System :: Networking :: Firewalls",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]

[tool.poetry.urls]
homepage = "https://fortigate-api.readthedocs.io"
repository = "https://github.com/vladimirs-git/fortigate-api"
"Bug Tracker" = "https://github.com/vladimirs-git/fortigate-api/issues"

[tool.poetry.dependencies]
python = "^3.8"
#
requests = ">=2.28"
vhelpers = ">=0.4.0"

[tool.poetry.group.test.dependencies]
dictdiffer = "^0.9.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"

[tool.poetry.group.docs.dependencies]
jinja2 = "^3.1.2"
readthedocs-sphinx-search = "^0.3.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-httpdomain = "^1.8.1"
sphinxcontrib-openapi = "^0.8.3"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
poetry = "^2.1.2"
#
mypy = "^1.15.0"
pydantic = "^2.5.3"  # tools
pydocstyle = "^6.3.0"
pygments = "^2.19.1"  # rst-lint
pylint = "^3.3.7"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
restructuredtext-lint = "^1.4.0"
ruff = "^0.11.10"
twine = "^6.0.1"
types-requests = "^2.32.0.20250515"
types-tabulate = "^0.9.0.20241207"
typing-extensions = "^4.13.2"

[tool.pylint]
max-line-length = 100
disable = "fixme"

[tool.pylint.message_control]
enable = ["too-many-arguments"]
max-args = 13

[tool.pylint."fortigate_api.*"]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-statements",
]
[tool.pylint."fortigate_api.cmdb.cmdb_s.py"]
disable = [
    "line-too-long",
]
[tool.pylint."tests.*"]
disable = [
    "duplicate-code",
    "protected-access",
    "redefined-outer-name",
    "redefined-builtin",
    "unused-import",
    "use-dict-literal",
]

[tool.mypy]
python_version = "3.11"

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "notes",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[tool.setuptools.package-data]
fortigate_api = ["py.typed"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
